--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "busboy": "^1.6.0",
     "mongoose": "^6.5.0",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
