--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "busboy": "^1.6.0",
+    "get-video-duration": "^4.1.0",
     "mongoose": "^6.5.0",
+    "multer": "^1.4.5-lts.1",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
