--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,5 @@ yarn-error.log*
 .vercel
 
 # static files
-/public/uploads/*
-!/public/uploads/.gitkeep
-/public/posters/*
-!/public/posters/.gitkeep
+/public/uploads/
+/public/posters/
