--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "get-video-duration": "^4.1.0",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
-    "next": "12.2.3",
+    "next": "^12.2.3",
     "next-auth": "^4.10.2",
     "next-connect": "^0.13.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.34.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.0",
+    "video-react": "^0.15.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
