--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "createsuperuser": "node ./scripts/createsuperuser.js"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -16,7 +17,9 @@
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.0",
     "busboy": "^1.6.0",
+    "dotenv": "^16.0.1",
     "get-video-duration": "^4.1.0",
+    "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
     "next": "^12.2.3",
