--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.34.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "swr": "^1.3.0",
     "video-react": "^0.15.0"
   },
   "devDependencies": {
