--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bootstrap": "^5.2.0",
     "busboy": "^1.6.0",
     "dotenv": "^16.0.1",
-    "get-video-duration": "^4.1.0",
+    "get-video-duration": "3.0.2",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
